Bug #5038: Doctype header should at the very first line of the HTML document otherwise some brower will not display the page correctly

--- a/core/assets/system/ees_login_design/design_files/index.html
+++ b/core/assets/system/ees_login_design/design_files/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!--
 /**
 * +--------------------------------------------------------------------+
@@ -10,11 +11,11 @@
 * | you a copy.                                                        |
 * +--------------------------------------------------------------------+
 *
-* $Id: index.html,v 1.2 2010/10/08 03:15:56 ewang Exp $
+* $Id: index.html,v 1.2.2.1 2011/04/05 05:55:24 cupreti Exp $
 *
 */
 -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
