Bug #5038: Doctype header should at the very first line of the HTML document otherwise some brower will not display the page correctly

--- a/core/assets/system/password_change_design/design_files/index.html
+++ b/core/assets/system/password_change_design/design_files/index.html
@@ -1,3 +1,5 @@
+<!doctype html public "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
 <!--
 /**
 * +--------------------------------------------------------------------+
@@ -18,12 +20,10 @@
 * | licence.                                                           |
 * +--------------------------------------------------------------------+
 *
-* $Id: index.html,v 1.6 2006/12/20 02:49:11 tbarrett Exp $
+* $Id: index.html,v 1.6.20.1 2011/04/05 06:40:03 cupreti Exp $
 *
 */
 -->
-<!doctype html public "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
 <html>
 <head>
     <title>Change Password</title>
