--- a/core/assets/system/login_design/design_files/index.html
+++ b/core/assets/system/login_design/design_files/index.html
@@ -1,3 +1,5 @@
+<!doctype html public "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <!--
 /**
 * +--------------------------------------------------------------------+
@@ -10,12 +12,10 @@
 * | you a copy.                                                        |
 * +--------------------------------------------------------------------+
 *
-* $Id: index.html,v 1.12 2006/12/06 04:40:08 emcdonald Exp $
+* $Id: index.html,v 1.12.22.1 2011/04/05 06:39:39 cupreti Exp $
 *
 */
 -->
-<!doctype html public "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
 	<title>Login</title>
